# langchain_bot

./: .gitignore  main.py  parse_data.py  pyproject.toml  readme.md
aiogram_docs/: changelog.md  contributing.md
aiogram_docs/api/: bot.md  download_file.md  index.md  upload_file.md
aiogram_docs/api/enums/: bot_command_scope_type.md  chat_action.md  chat_member_status.md  chat_type.md  content_type.md  currency.md  dice_emoji.md  encrypted_passport_element.md  index.md  inline_query_result_type.md  input_media_type.md  mask_position_point.md  menu_button_type.md  message_entity_type.md  parse_mode.md  passport_element_error_type.md  poll_type.md  sticker_format.md  sticker_type.md  topic_icon_color.md  update_type.md
aiogram_docs/api/methods/: add_sticker_to_set.md  answer_callback_query.md  answer_inline_query.md  answer_pre_checkout_query.md  answer_shipping_query.md  answer_web_app_query.md  approve_chat_join_request.md  ban_chat_member.md  ban_chat_sender_chat.md  close.md  close_forum_topic.md  close_general_forum_topic.md  copy_message.md  create_chat_invite_link.md  create_forum_topic.md  create_invoice_link.md  create_new_sticker_set.md  decline_chat_join_request.md  delete_chat_photo.md  delete_chat_sticker_set.md  delete_forum_topic.md  delete_message.md  (+93 more)
aiogram_docs/dispatcher/: dependency_injection.md  dispatcher.md  errors.md  flags.md  index.md  long_polling.md  middlewares.md  router.md  webhook.md
aiogram_docs/utils/: callback_answer.md  chat_action.md  deep_linking.md  formatting.md  i18n.md  index.md  keyboard.md  media_group.md  web_app.md
(+179 files in other folders)
