[tool.poetry]
name = "langchain-bot"
version = "0.1.0"
description = ""
authors = ["Trionyx <Trionyxxx@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pypandoc = "^1.12"
langchain = "^0.0.348"
unstructured = {extras = ["md"], version = "^0.11.2"}
openai = "^1.3.8"
chromadb = "^0.4.18"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
